--- a/app/assets/stylesheets/app.scss
+++ b/app/assets/stylesheets/app.scss
@@ -181,6 +181,7 @@ th,
   background-color: $table-head-background;
   font-size: .85em;
   font-weight: bold;
+  line-height: 1.25em;
   text-align: left;
   padding: .25em 0;
   vertical-align: bottom;
