--- a/app/views/shared/_reviews_by_criteria.html.haml
+++ b/app/views/shared/_reviews_by_criteria.html.haml
@@ -9,7 +9,7 @@
 
     - @reviews.completed.each do |review|
       .grid-x.grid-margin-x.review{ id: "review-#{review.id}" }
-        .cell.small-12.medium-2.medium-text-right.reviewer
+        .cell.small-12.medium-2.small-text-left.medium-text-right.reviewer
           = full_name(review.reviewer)
         .cell.small-12.medium-9.responses
           - scored_criterion = review.criteria_reviews.detect { |score| score.criterion_id == criterion.id }
@@ -28,9 +28,9 @@
 
     - @reviews.completed.each do |review|
       .grid-x.grid-margin-x
-        .cell.small-12.medium-2.medium-text-right
+        .cell.small-12.medium-2.medium-text-right.reviewer
           = full_name(review.reviewer)
-        .cell.small-12.medium-9
+        .cell.small-12.medium-9.responses
           .score
             = review.overall_impact_score
           - if show_review_comments
