--- a/app/views/grant_submissions/submissions/show.html.haml
+++ b/app/views/grant_submissions/submissions/show.html.haml
@@ -29,9 +29,8 @@
     %h4
       = @submission.title
     %h5
-      - applicants = @submission.applicants
-      = 'Applicant'.pluralize(applicants.count) + ':'
-      = full_name_list(applicants)
+      = applicant_label(@submission.applicants)
+      = full_name_list(@submission.applicants)
     %p
       Submitter:
       = full_name(@submission.submitter)
