--- a/app/views/profiles/reviews/index.html.haml
+++ b/app/views/profiles/reviews/index.html.haml
@@ -26,27 +26,27 @@
     %thead
       %tr
         %th
-          = sort_link(@q, :overall_impact_score, 'Completed',{}, { title: 'Sort on Completed' })
+          = sort_link(@q, :overall_impact_score, 'Completed', {}, { title: 'Sort on Completed' })
         %th
-          = sort_link(@q, :grant_name, 'Grant',{}, { title: 'Sort on Grant' })
+          = sort_link(@q, :grant_name, 'Grant', {}, { title: 'Sort on Grant' })
         %th
           = sort_link(@q, :applicants_last_name, 'Applicants', {}, { title: 'Sort on Applicants' })
         %th
-          = sort_link(@q, :submission_title, 'Submission Title',{}, { title: 'Sort on Submission Title' })
+          = sort_link(@q, :submission_title, 'Submission Title', {}, { title: 'Sort on Submission Title' })
         %th
-          = sort_link(@q, :created_at, 'Assigned On',{}, { title: 'Sort on Assigned Date' })
+          = sort_link(@q, :created_at, 'Assigned On', {}, { title: 'Sort on Assigned Date' })
         %th
-          = sort_link(@q, :grant_review_close_date, 'Due by Date',{}, { title: 'Sort on Due Date' })
+          = sort_link(@q, :grant_review_close_date, 'Due by Date', {}, { title: 'Sort on Due Date' })
 
     %tbody
       - @reviews.each do |review|
         - grant_published = review.grant.published?
-        - review_complete = review.is_complete?
+        - review_complete = review.submitted?
         - grant = review.grant
         - submission = review.submission
         %tr
           %td
-            = link_to_if grant_published, (review_complete ? 'Completed' : 'Incomplete'), (review_complete ? grant_submission_review_path(grant, submission, review) : edit_grant_submission_review_path(grant, submission, review))
+            = link_to_if grant_published, display_review_state(review.state), (review_complete ? grant_submission_review_path(grant, submission, review) : edit_grant_submission_review_path(grant, submission, review))
           %td
             = review.grant.name
             = "(unpublished)" unless grant_published
