--- a/app/views/panels/_submission.html.haml
+++ b/app/views/panels/_submission.html.haml
@@ -5,7 +5,7 @@
   %td
     = link_to submission.title, grant_submission_path(grant, submission)
   %td
-    = link_to 'Review'.pluralize(submission.reviews.count), grant_submission_reviews_path(grant, submission)
+    = link_to 'Review'.pluralize(review_data.completed_review_count), grant_submission_reviews_path(grant, submission)
     = surround '(', ')' do
       #{review_data.completed_review_count}
   %td
