--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -19,8 +19,12 @@ main {
       }
     }
     form {
-      textarea.comment {
-        overflow: hidden;
+      comment {
+        min-height: auto;
+        textarea {
+          min-height: auto;
+          overflow-y: hidden !important;
+        }
       }
       #overall,
       .criterion {
@@ -41,12 +45,19 @@ main {
         }
         .clear-button {
           margin-left: 2em;
+          opacity: .4;
+          &:hover {
+            opacity: .8;
+          }
         }
-        .score_value,{
+        .score_value {
           display: inline-block;
           margin-right: .5em;
           &:last-of-type {
             margin-right: none;
+          }
+          field_with_errors { 
+            display: inline; 
           }
           label {
             border: 1px solid $dark-gray;
