Add comments to view partials to clarify behavior

--- a/app/views/grant_submissions/submissions/reviews/_criterion.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/_criterion.html.haml
@@ -1,3 +1,6 @@
+-# NOTE: field_with_errors behavior has been overridden in environment.rb
+-#       due to conflicts with nested divs/css affecting scoring.
+
 - index = criterion_index
 - criterion = criterion_review.criterion
 - criterion_id = criterion.name.parameterize(separator: '_')
