--- a/app/views/shared/_reviews_by_criteria.html.haml
+++ b/app/views/shared/_reviews_by_criteria.html.haml
@@ -1,6 +1,6 @@
 -# NOTE: default rails field_with_error has been overridden
 -#       because nested divs/css broke scoring with invalid 
--#       form submissions. 
+-#       form submissions. see environment.rb 
 .grid-container
   %h4#criteria-reviews
     Scores
