--- a/app/views/grant_submissions/submissions/reviews/_overall_impact.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/_overall_impact.html.haml
@@ -1,3 +1,7 @@
+-# NOTE: field_with_errors behavior has been overridden in environment.rb
+-#       due to conflicts with nested divs/css affecting scoring.
+
+
 #overall{ data: { controller: 'reviews' } }
   %h4
     Overall
