--- a/app/views/grant_submissions/submissions/reviews/_review.html.haml
+++ b/app/views/grant_submissions/submissions/reviews/_review.html.haml
@@ -4,10 +4,11 @@
   %td.pdf-hide
     = review.is_complete? ? link_to(display_review_state(review.state), grant_submission_review_path(@grant, @submission, review)) : display_review_state(review.state)
   %td
-    = (review.overall_impact_score || 0)
+    = review.submitted? ? review.overall_impact_score : '-'
   %td
-    = review.composite_score
+    = review.submitted? ? review.composite_score : '-'
   - @grant.criteria.each do |criterion|
     %td
       - criterion_score = review.criteria_reviews.detect { |cr| cr.criterion_id == criterion.id }
-      = (criterion_score.nil? || criterion_score.score.nil?)? '-' : criterion_score.score
+      =# (criterion_score.nil? || criterion_score.score.nil?)? '-' : criterion_score.score
+      = review.submitted? ? criterion_score.score : '-'
