Task/add submission state enum (#1024)
* WIP: add migration

* WIP: add review_states to model

* WIP: add state traits to review factory

* WIP: update specs

* WIP: Add state to review controller and form submit button

* WIP: update legacy `is_complete?` method to use enum

* WIP: limit submission score calculations to submitted reviews

* WIP: Add translation for review states

* WIP: include 'draft' status in messages related to reviews

* WIP: Add save draft button to review form

* WIP: add required_criteria scope

* WIP: add helper for review scores to appropriately display scores in index views.

* Fix scores field_with_error issue, move score clear js to stimulus, fix draft/submission error aggregation/display

* Add comments to view partials to clarify behavior

* Formatting fixes

* Fix error enumeration deprecation warning

* Only include scores from submitted reviews on admin grant/submission/reviews display

* Only include score/comment for submitted reviews in xlsx file

* WIP: misc clarification, formatting, typo fixes

--- a/app/assets/stylesheets/reviews.scss
+++ b/app/assets/stylesheets/reviews.scss
@@ -19,8 +19,12 @@ main {
       }
     }
     form {
-      textarea.comment {
-        overflow: hidden;
+      comment {
+        min-height: auto;
+        textarea {
+          min-height: auto;
+          overflow-y: hidden !important;
+        }
       }
       #overall,
       .criterion {
@@ -37,16 +41,23 @@ main {
       .button-group {
         .scoring-guidance {
           color: $dark-gray;
-          padding: 0.5em 1em;
+          padding: 0.25em 1em;
         }
         .clear-button {
           margin-left: 2em;
+          opacity: .4;
+          &:hover {
+            opacity: .8;
+          }
         }
-        .score_value,{
+        .score_value {
           display: inline-block;
           margin-right: .5em;
           &:last-of-type {
             margin-right: none;
+          }
+          field_with_errors { 
+            display: inline; 
           }
           label {
             border: 1px solid $dark-gray;
