--- a/app/views/profiles/reviews/index.html.haml
+++ b/app/views/profiles/reviews/index.html.haml
@@ -26,39 +26,42 @@
     %thead
       %tr
         %th
-          = sort_link(@q, :overall_impact_score, 'Completed',{}, { title: 'Sort on Completed' })
+          = sort_link(@q, :overall_impact_score, 'Status', {}, { title: 'Sort on Status' })
         %th
-          = sort_link(@q, :grant_name, 'Grant',{}, { title: 'Sort on Grant' })
+          = sort_link(@q, :grant_name, 'Grant', {}, { title: 'Sort on Grant' })
         %th
           = sort_link(@q, :applicants_last_name, 'Applicants', {}, { title: 'Sort on Applicants' })
         %th
-          = sort_link(@q, :submission_title, 'Submission Title',{}, { title: 'Sort on Submission Title' })
+          = sort_link(@q, :submission_title, 'Submission Title', {}, { title: 'Sort on Submission Title' })
         %th
-          = sort_link(@q, :created_at, 'Assigned On',{}, { title: 'Sort on Assigned Date' })
+          = sort_link(@q, :created_at, 'Assigned On', {}, { title: 'Sort on Assigned Date' })
         %th
-          = sort_link(@q, :grant_review_close_date, 'Due by Date',{}, { title: 'Sort on Due Date' })
+          = sort_link(@q, :grant_review_close_date, 'Due by Date', {}, { title: 'Sort on Due Date' })
 
     %tbody
       - @reviews.each do |review|
-        - grant_published = review.grant.published?
-        - review_complete = review.is_complete?
+        - review_data = display_review_data(review: review, user: current_user)
+
+        -# grant_published = review.grant.published?
+        -# review_complete = (review_data.status == 'submitted')
         - grant = review.grant
         - submission = review.submission
-        %tr
+
+        %tr{ id: dom_id(review) }
           %td
-            = link_to_if grant_published, (review_complete ? 'Completed' : 'Incomplete'), (review_complete ? grant_submission_review_path(grant, submission, review) : edit_grant_submission_review_path(grant, submission, review))
+            = review_data.link 
           %td
             = review.grant.name
-            = "(unpublished)" unless grant_published
+            = "(unpublished)" unless grant.published?
           %td
             - submission.applicants.each do |applicant|
               = link_to sortable_full_name(applicant), grant_submission_path(grant, submission)
               %br
           %td
-            = link_to_if grant_published, truncate(submission.title), grant_submission_path(grant, submission)
+            = link_to_if grant.published?, truncate(submission.title), grant_submission_path(grant, submission)
           %td
-            = time_tag(review.created_at, review.created_at.to_formatted_s(:default))
+            = review_data.created_date #time_tag(review.created_at, review.created_at.to_formatted_s(:default))
           %td
-            = time_tag(review.grant.review_close_date.end_of_day, review.grant.review_close_date.to_formatted_s(:default))
+            = review_data.due_date # time_tag(review.grant.review_close_date.end_of_day, review.grant.review_close_date.to_formatted_s(:default))
 
   != pagy_foundation_nav(@pagy)
